[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Main.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="."]
margin_right = 500.0
margin_bottom = 400.0
script = ExtResource( 1 )

[node name="TitleLabel" type="Label" parent="Panel"]
margin_left = 20.0
margin_top = 10.0
margin_right = 490.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
text = "FUTUREAL
Tweaker"
align = 1
valign = 1

[node name="TabContainer" type="TabContainer" parent="Panel"]
margin_left = 10.0
margin_top = 110.0
margin_right = 490.0
margin_bottom = 390.0

[node name="Saves" type="Tabs" parent="Panel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="Panel/TabContainer/Saves"]
margin_left = 96.0
margin_top = 8.0
margin_right = 376.0
margin_bottom = 48.0
text = "Level number (account from scratch):"
align = 1
valign = 2

[node name="LevelNumberLineEdit" type="LineEdit" parent="Panel/TabContainer/Saves"]
margin_left = 96.0
margin_top = 68.0
margin_right = 376.0
margin_bottom = 92.0
align = 1
placeholder_text = "0-14"
caret_blink = true

[node name="SavesCheckButton" type="Button" parent="Panel/TabContainer/Saves"]
margin_left = 96.0
margin_top = 98.0
margin_right = 231.0
margin_bottom = 148.0
text = "Check"

[node name="SavesFixButton" type="Button" parent="Panel/TabContainer/Saves"]
margin_left = 241.0
margin_top = 98.0
margin_right = 376.0
margin_bottom = 148.0
text = "Fix"

[node name="CheckAcceptDialog" type="AcceptDialog" parent="Panel/TabContainer/Saves"]
anchor_left = 0.5
anchor_top = 0.443
anchor_right = 0.5
anchor_bottom = 0.443
margin_left = -140.0
margin_top = -40.092
margin_right = 140.0
margin_bottom = 39.908
popup_exclusive = true
window_title = ""

[node name="FixAcceptDialog" type="AcceptDialog" parent="Panel/TabContainer/Saves"]
anchor_left = 0.5
anchor_top = 0.443
anchor_right = 0.5
anchor_bottom = 0.443
margin_left = -140.0
margin_top = -40.092
margin_right = 140.0
margin_bottom = 39.908
popup_exclusive = true
window_title = ""

[node name="Settings" type="Tabs" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="SettingsCheckButton" type="Button" parent="Panel/TabContainer/Settings"]
margin_left = 296.0
margin_top = 8.0
margin_right = 466.0
margin_bottom = 58.0
text = "Check"

[node name="SettingsFixButton" type="Button" parent="Panel/TabContainer/Settings"]
margin_left = 296.0
margin_top = 68.0
margin_right = 466.0
margin_bottom = 118.0
text = "Fix"

[node name="FullscreenCheckButton" type="CheckButton" parent="Panel/TabContainer/Settings"]
margin_left = 6.0
margin_top = -2.0
margin_right = 276.0
margin_bottom = 38.0
pressed = true
text = "Fullscreen"

[node name="MuteCheckButton" type="CheckButton" parent="Panel/TabContainer/Settings"]
margin_left = 6.0
margin_top = 38.0
margin_right = 276.0
margin_bottom = 78.0
text = "Mute"

[node name="AutoreloadCheckButton" type="CheckButton" parent="Panel/TabContainer/Settings"]
margin_left = 6.0
margin_top = 78.0
margin_right = 276.0
margin_bottom = 118.0
text = "Autoreload"

[node name="ShowActionsCheckButton" type="CheckButton" parent="Panel/TabContainer/Settings"]
margin_left = 6.0
margin_top = 118.0
margin_right = 276.0
margin_bottom = 158.0
pressed = true
text = "Show actions"

[node name="ShowTrailsCheckButton" type="CheckButton" parent="Panel/TabContainer/Settings"]
margin_left = 6.0
margin_top = 158.0
margin_right = 276.0
margin_bottom = 198.0
pressed = true
text = "Show trails"

[node name="CRTEffectCheckButton" type="CheckButton" parent="Panel/TabContainer/Settings"]
margin_left = 6.0
margin_top = 198.0
margin_right = 276.0
margin_bottom = 238.0
pressed = true
text = "CRT effect"

[node name="CheckAcceptDialog" type="AcceptDialog" parent="Panel/TabContainer/Settings"]
anchor_left = 0.5
anchor_top = 0.443
anchor_right = 0.5
anchor_bottom = 0.443
margin_left = -140.0
margin_top = -40.092
margin_right = 140.0
margin_bottom = 39.908
popup_exclusive = true
window_title = ""

[node name="FixAcceptDialog" type="AcceptDialog" parent="Panel/TabContainer/Settings"]
anchor_left = 0.5
anchor_top = 0.443
anchor_right = 0.5
anchor_bottom = 0.443
margin_left = -140.0
margin_top = -40.092
margin_right = 140.0
margin_bottom = 39.908
popup_exclusive = true
window_title = ""

[node name="Deleting" type="Tabs" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="AttentionLabel" type="Label" parent="Panel/TabContainer/Deleting"]
margin_left = 6.0
margin_top = -2.0
margin_right = 466.0
margin_bottom = 18.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Attention: deletion cannot be undone! Use only when needed."
align = 1
valign = 1

[node name="LevelNumberLineEdit" type="LineEdit" parent="Panel/TabContainer/Deleting"]
margin_left = 96.0
margin_top = 28.0
margin_right = 376.0
margin_bottom = 52.0
align = 1
placeholder_text = "0-14"
caret_blink = true

[node name="DeleteSaveButton" type="Button" parent="Panel/TabContainer/Deleting"]
margin_left = 96.0
margin_top = 68.0
margin_right = 376.0
margin_bottom = 118.0
text = "Delete save"

[node name="DeleteSettingsButton" type="Button" parent="Panel/TabContainer/Deleting"]
margin_left = 96.0
margin_top = 128.0
margin_right = 376.0
margin_bottom = 178.0
text = "Delete settings"

[node name="DeleteLogsButton" type="Button" parent="Panel/TabContainer/Deleting"]
margin_left = 96.0
margin_top = 188.0
margin_right = 376.0
margin_bottom = 238.0
text = "Delete logs"

[node name="AcceptDialog" type="AcceptDialog" parent="Panel/TabContainer/Deleting"]
anchor_left = 0.5
anchor_top = 0.443
anchor_right = 0.5
anchor_bottom = 0.443
margin_left = -140.0
margin_top = -40.092
margin_right = 140.0
margin_bottom = 39.908
popup_exclusive = true
window_title = ""

[node name="About" type="Tabs" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="AboutLabel" type="Label" parent="Panel/TabContainer/About"]
margin_left = 6.0
margin_top = 8.0
margin_right = 466.0
margin_bottom = 208.0
text = "Futureal Tweaker
by GREAT DNG

Tool for correcting Futureal settings and saves files.

Licensed under the MIT license."
align = 1
valign = 1
autowrap = true

[node name="GameLinkButton" type="LinkButton" parent="Panel/TabContainer/About"]
margin_left = 6.0
margin_top = 218.0
margin_right = 157.0
margin_bottom = 238.0
text = "Futureal game webpage"

[node name="TweakerLinkButton2" type="LinkButton" parent="Panel/TabContainer/About"]
margin_left = 300.0
margin_top = 218.0
margin_right = 466.0
margin_bottom = 238.0
focus_mode = 2
text = "Futureal tweaker webpage"

[connection signal="pressed" from="Panel/TabContainer/Saves/SavesCheckButton" to="Panel" method="_on_SavesCheckButton_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Saves/SavesFixButton" to="Panel" method="_on_SavesFixButton_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Settings/SettingsCheckButton" to="Panel" method="_on_SettingsCheckButton_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Settings/SettingsFixButton" to="Panel" method="_on_SettingsFixButton_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Deleting/DeleteSaveButton" to="Panel" method="_on_DeleteSaveButton_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Deleting/DeleteSettingsButton" to="Panel" method="_on_DeleteSettingsButton_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Deleting/DeleteLogsButton" to="Panel" method="_on_DeleteLogsButton_pressed"]
[connection signal="pressed" from="Panel/TabContainer/About/GameLinkButton" to="Panel" method="_on_GameLinkButton_pressed"]
[connection signal="pressed" from="Panel/TabContainer/About/TweakerLinkButton2" to="Panel" method="_on_TweakerLinkButton2_pressed"]
